changes to support showing backlogs under the redmine banner

--- a/app/views/rb_master_backlogs/show.html.erb
+++ b/app/views/rb_master_backlogs/show.html.erb
@@ -32,3 +32,4 @@
 <%= render :partial => "rb_stories/helpers" %>
 <div id="last_updated"><%= date_string_with_milliseconds(@last_update, 0.001) %></div>
 <%- end %>
+<% parent_layout('rb_new') %>
