--- a/assets/stylesheets/rb_default/global.css
+++ b/assets/stylesheets/rb_default/global.css
@@ -1,11 +1,11 @@
 /* GLOBAL */
 body{
   background-color:#FFFFFF;
-  font-family:Verdana, Arial, sans-serif;
+  /*font-family:Verdana, Arial, sans-serif;
   font-size:1em;
   height:100%;
   margin:0;
-  width:100%;
+  width:100%;*/
 }
 a{
   color:#CC0000;
